--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -19,6 +19,6 @@ jobs:
 
       - name: Execute PowerShell script
         run: |
-          .\your-script.ps1
+          .\everesrapidynamic.ps1
         env:
           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
