--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -15,3 +15,8 @@ jobs:
     - run: |
         # Run your PowerShell script
         .\everesrapidynamic.ps1
+    - name: Generate Postman Collection
+      uses: fluximus-prime/openapi-to-postman-action@v1.0.1
+      with:
+        openapi_url: https://raw.githubusercontent.com/vamsi560/everest/main/openapi.yaml
+        output_file: postman-collection.json
