--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Set up PowerShell
+      uses: azure/setup-powershell@v1
+
+    - name: Install Az module
+      run: Install-Module -Name Az -Force -AllowClobber
     - run: |
         # Run your PowerShell script
         .\everesrapidynamic.ps1
