--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -16,6 +16,10 @@ jobs:
     - name: Install Az module
       run: Install-Module -Name Az -Force -AllowClobber
 
+    - name: Uninstall AzureRm module
+      run: |
+        Uninstall-AzureRm -Force
+
     - name: Import Az Module
       run: |
         Import-Module -Name Az
