--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Uninstall AzureRm module
       run: |
-        Uninstall-AzureRm -Force
+        Uninstall-AzureRm
 
     - name: Import Az Module
       run: |
