--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -9,19 +9,23 @@ jobs:
   build:
     runs-on: windows-2019
 
-    env:
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Azure CLI
-      uses: azure/login@v1
+    - name: Set up PowerShell
+      uses: actions/setup-powershell@v1
       with:
-        creds: ${{ env.AZURE_CLIENT_ID }}:${{ env.AZURE_CLIENT_SECRET }}:${{ env.AZURE_TENANT_ID }}
+        powershell-version: '7.1'
+
+    - name: Azure Login
+      env:
+        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      run: |
+        az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
+        az account set --subscription 588bd1bd-718e-4c84-8586-f2d69a7cf61a # Replace with your subscription ID
 
     - name: Install Az module
       run: Install-Module -Name Az -Force -AllowClobber
