--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -14,13 +14,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Azure Login
-      run: |
-        az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-        az account set --subscription 588bd1bd-718e-4c84-8586-f2d69a7cf61a
       env:
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+        AZURE_CLIENT_ID: ${{ secrets.client_id }}
+        AZURE_TENANT_ID: ${{ secrets.tenant_id }}
+        AZURE_CLIENT_SECRET: ${{ secrets.client_secret }}
+      run: |
+        az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
+        az account set --subscription Your-Subscription-ID
+
 
 
     - name: Install Az module
