--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -15,12 +15,13 @@ jobs:
 
     - name: Azure Login
       env:
-        AZURE_CLIENT_ID: ${{ secrets.client_id }}
-        AZURE_TENANT_ID: ${{ secrets.tenant_id }}
-        AZURE_CLIENT_SECRET: ${{ secrets.client_secret }}
+        AZURE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+        AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        AZURE_SUBSCRIPTION: ${{ secrets.SUBSCRIPTION_ID }}
       run: |
         az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
-        az account set --subscription Your-Subscription-ID
+        az account set --subscription $AZURE_SUBSCRIPTION
 
 
 
