--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -26,11 +26,13 @@ jobs:
       uses: fluximus-prime/openapi-to-postman-action@v1.0.1
       with:
         postmanApiKey: PMAK-652680f168a9e70afa583323-d8369fb2eb8babf7734a63193df75fd0d4
-        openApiSpec: api/openapi.yaml
+        openApiSpec: .api/openapi.yaml
 
     - name: Lint OpenAPI (Spectral)
       uses: morigs/lint-api-docs-action@v1.0.0
-
+      with:
+        files-glob: '.api/openapi.yaml'
+        
     - name: Run PowerShell script
       run: |
         # Run your PowerShell script
