--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -13,6 +13,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
+
+    - name: Run Spectral Validation
+      run: |
+        docker run -v $PWD:/workdir stoplight/spectral lint openapi.yaml
+      working-directory: ${{ github.workspace }}
+
     - name: Installing Dependencies
       run: |
         Install-Module -Name Az -Force -AllowClobber
@@ -20,19 +30,6 @@ jobs:
         Uninstall-AzureRm
         Install-Module -Name powershell-yaml -Force
         Import-Module -Name powershell-yaml
-
-    - name: Run spectral lint
-      uses: ahmetgeymen/spectral-lint-action@v1.0
-      with:
-        file_path: openapi.yml
-
-    - name: Publish OpenAPI Spec to Postman
-      uses: aanimesh23/openapi-publish-action@v1
-      with:
-        collectionName: MyCollection
-        workspaceName: Api Lifecycle
-        postmanApiKey: PMAK-652680f168a9e70afa583323-d8369fb2eb8babf7734a63193df75fd0d4
-        openApiSpec: openapi.yaml
 
     - name: Run PowerShell script
       run: |
