--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -20,7 +20,9 @@ jobs:
 
     - name: Run Spectral Validation
       run: |
-        docker run -v $PWD:/workdir stoplight/spectral lint openapi.yaml
+        # Download the Windows version of Spectral
+        iwr https://github.com/stoplightio/spectral/releases/latest/download/spectral.exe -OutFile spectral.exe
+        .\spectral.exe lint openapi.yaml
       working-directory: ${{ github.workspace }}
 
     - name: Installing Dependencies
