--- a/.api/spectral.yml
+++ b/.api/spectral.yml
@@ -1,2 +1,25 @@
 extends:
-  - https://raw.githubusercontent.com/stoplightio/spectral/master/rulesets/oas2-schema.yml
+  - spectral:oas
+
+formats:
+  - oas3
+
+rules:
+  # Check that operation IDs are in camelCase
+  operation-id-camel-case:
+    given: "$.paths.*.*.operationId"
+    message: "Operation IDs should be in camelCase"
+    severity: error
+    then:
+      function: pattern
+      functionOptions:
+        match: "^[a-z][a-zA-Z0-9]*$"
+
+  # Check that all paths have descriptions
+  paths-have-descriptions:
+    given: "$.paths.*"
+    message: "Paths should have descriptions"
+    severity: warning
+    then:
+      field: description
+      function: truthy
