--- a/.api/spectral.yml
+++ b/.api/spectral.yml
@@ -9,7 +9,7 @@ rules:
   operation-id-camel-case:
     given: "$.paths.*.*.operationId"
     message: "Operation IDs should be in camelCase"
-    severity: "error" # Use "error" instead of error
+    severity: 3 # Use "3" for "error"
     then:
       function: pattern
       functionOptions:
@@ -19,26 +19,7 @@ rules:
   paths-have-descriptions:
     given: "$.paths.*"
     message: "Paths should have descriptions"
-    severity: "warning" # Use "warning" instead of warning
-    then:
-      field: description
-      function: truthy
-
-  # Additional basic rules:
-  # Check that all schemas use type properties
-  schemas-have-type:
-    given: "$.components.schemas.*"
-    message: "Schemas should have type properties"
-    severity: "warning" # Use "warning" instead of warning
-    then:
-      field: type
-      function: truthy
-
-  # Check that responses have a description
-  responses-have-description:
-    given: "$.paths.*.*.responses.*"
-    message: "Responses should have a description"
-    severity: "warning" # Use "warning" instead of warning
+    severity: 2 # Use "2" for "warning"
     then:
       field: description
       function: truthy
