--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -49,7 +49,4 @@ jobs:
       run: npm install -g newman
 
     - name: Convert OAS to Postman
-      run: newman run openapi.yaml -e PostmanEnvironment.json -o postman-output.json
-
-    - name: Move Postman Collection to '.api' folder
-      run: mv postman-output.json .api/
+      run: newman run openapi.yaml -e PostmanEnvironment.json --reporters cli,json --reporter-json-export api/postman-output.json
