--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -24,14 +24,14 @@ jobs:
     - name: Convert OAS to Postman
       run: |
         # You may need to adjust the path to the OAS spec file
-        openapi-to-postman convert --path path/to/openapi.yaml
+        openapi-to-postman convert --path openapi.yaml
         mv converted.json .api/postman-collection.json
 
     - name: Lint OpenAPI (Spectral)
       run: |
         # Install Spectral
         npm install -g @stoplight/spectral
-        spectral lint --ruleset .api/spectral.yml path/to/openapi.yaml
+        spectral lint --ruleset .api/spectral.yml openapi.yaml
 
     - name: Run PowerShell script
       run: |
