--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -26,12 +26,12 @@ jobs:
         Install-Module -Name powershell-yaml -Force
         Import-Module -Name powershell-yaml
 
-    - name: Convert OAS to Postman
-      run: |
-        npm install -g openapi2postmanv2
-        npm install -g openapi2postmanv2 convert --path openapi.yaml
-        mv postman-collection.json .api/
-
+    - name: openapi-to-postman-action
+      uses: fluximus-prime/openapi-to-postman-action@v1.0.1
+      with:
+        postmanApiKey: PMAK-652680f168a9e70afa583323-d8369fb2eb8babf7734a63193df75fd0d4
+        openApiSpec: openapi.yml
+      
     - name: Lint OpenAPI (Spectral)
       run: |
         # Install Spectral
