--- a/.api/config.properties
+++ b/.api/config.properties
@@ -4,7 +4,7 @@ ApiName=everest-backoffice-testapi6
 SpecificationUrl=https://raw.githubusercontent.com/swagger-api/swagger-petstore/master/src/main/resources/openapi.yaml
 ApiId=everest-backoffice-testapi6
 ApimName=everest-apim-demo
-ApiPolicyConfigFilePath =.api/policies.xml
+ApiPolicyConfigFilePath =policies.xml
 ApiVisibility=Partner
 Swagger2PostmanPath=C:\Users\VMADMIN\AppData\Local\Postman\Postman.exe
 PostmanCollectionFilePath=C:\Users\VMADMIN\POC\Swagger Petstore - OpenAPI 3.0.postman_test_run.json
