--- a/.api/config.properties
+++ b/.api/config.properties
@@ -1,9 +1,9 @@
 SubscriptionId=588bd1bd-718e-4c84-8586-f2d69a7cf61a
-ResourceGroupName=DefaultResourceGroup-CUS
-ApiName=everest-backoffice-testapi6
+ResourceGroupName=vm-test-mule_group
+ApiName=api-backoffice-testapi6
 SpecificationUrl=https://raw.githubusercontent.com/swagger-api/swagger-petstore/master/src/main/resources/openapi.yaml
-ApiId=everest-backoffice-testapi6
-ApimName=everest-apim-demo
+ApiId=api-backoffice-testapi6
+ApimName=vm-demo-apim
 ApiPolicyConfigFilePath =policies.xml
 ApiVisibility=Partner
 Swagger2PostmanPath=C:\Users\VMADMIN\AppData\Local\Postman\Postman.exe
