--- a/.api/config.properties
+++ b/.api/config.properties
@@ -7,4 +7,4 @@ ApimName=vm-demo-apim
 ApiPolicyConfigFilePath =policies.xml
 ApiVisibility=Partner
 Swagger2PostmanPath=C:\Users\VMADMIN\AppData\Local\Postman\Postman.exe
-PostmanCollectionFilePath=C:\Users\VMADMIN\POC\Swagger Petstore - OpenAPI 3.0.postman_test_run.json
+PostmanCollectionFilePath=C:\Users\VMADMIN\POC\collection.json
