--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -27,18 +27,28 @@ jobs:
         Import-Module -Name powershell-yaml
         npm install -g @stoplight/spectral
         npm install -g openapi-to-postmanv2
-      
-    - name: API Specification Validation (Spectral)
-      run: |
-        # Install Spectral
-        spectral lint --ruleset .api/spectral.yml openapi.yaml
 
     - name: Generate Postman Collection
       run: |
         openapi2postmanv2 -s openapi.yaml -o .api/collection.json -p -O requestParametersResolution=Example,optimizeConversion=false,stackLimit=50
+
+    - name: Generate Postman collection from OpenAPI file
+      run: |
+        openapi2postmanv2 -s openapi.yaml -o .api/postman_collection.json
 
     - name: Run PowerShell script
       run: |
         Set-Location -Path .api
         # Run your PowerShell script
         .\everesrapidynamic.ps1
+
+    - name: API Specification Validation (Spectral)
+      run: |
+        # Install Spectral
+        spectral lint --ruleset .api/spectral.yml openapi.yaml
+
+    - name: Commit Postman collection to GitHub repository
+      run: |
+        git add .api/postman_collection.json
+        git commit -m "Add Postman collection"
+        git push
